AC_INIT([libts], [0.1], [hatton.mark@gmail.com])

#checks for programs
AM_INIT_AUTOMAKE(foreign)
#AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX
LT_INIT

#checks for libraries
#checks for header files
#checks for types
#checks for structures
#checks for compiler characteristics
#checks for library functions
#checks for system services

AC_CONFIG_FILES([Makefile])
AC_OUTPUT

